Zapisanie prac i zmian

--- a/languages/en-GB.plg_j2store_payment_dotpay.ini
+++ b/languages/en-GB.plg_j2store_payment_dotpay.ini
@@ -7,3 +7,6 @@ J2STORE_PLUGIN_DOTPAY_TOKEN_LABEL="Token"
 J2STORE_PLUGIN_DOTPAY_TOKEN_DESC="Token for Dotpay payments"
 J2STORE_PLUGIN_DOTPAY_SANDBOX_LABEL="Sandbox"
 J2STORE_PLUGIN_DOTPAY_SANDBOX_DESC="Change from production to testing envairment"
+
+;CHECKOUT
+J2STORE_PLUGIN_DOTPAY_SUBMIT_BUTTON='Pay in Dotpay"
