--- a/languages/pl-PL.plg_j2store_payment_dotpay.ini
+++ b/languages/pl-PL.plg_j2store_payment_dotpay.ini
@@ -7,3 +7,8 @@ J2STORE_PLUGIN_DOTPAY_TOKEN_LABEL="Token"
 J2STORE_PLUGIN_DOTPAY_TOKEN_DESC="Token dla systemu płatności Dotpay."
 J2STORE_PLUGIN_DOTPAY_SANDBOX_LABEL="Środowisko testowe"
 J2STORE_PLUGIN_DOTPAY_SANDBOX_DESC="Zmiana środowiska z produkcyjnego na testowe."
+
+;CHECKOUT
+J2STORE_PLUGIN_DOTPAY_SUBMIT_BUTTON="Płać z Dotpay"
+J2STORE_PLUGIN_DOTPAY_CURRENCY_ERROR="Wybrana waluta jest nieobsługiwana przez Dotpay"
+J2STORE_PLUGIN_DOTPAY_ORDER="Zamówienie nr: "
