--- a/languages/en-GB.plg_j2store_payment_dotpay.ini
+++ b/languages/en-GB.plg_j2store_payment_dotpay.ini
@@ -9,4 +9,6 @@ J2STORE_PLUGIN_DOTPAY_SANDBOX_LABEL="Sandbox"
 J2STORE_PLUGIN_DOTPAY_SANDBOX_DESC="Change from production to testing envairment"
 
 ;CHECKOUT
-J2STORE_PLUGIN_DOTPAY_SUBMIT_BUTTON='Pay in Dotpay"
+J2STORE_PLUGIN_DOTPAY_SUBMIT_BUTTON="Pay in Dotpay"
+J2STORE_PLUGIN_DOTPAY_CURRENCY_ERROR="Dotpay don`t allow this currency"
+J2STORE_PLUGIN_DOTPAY_ORDER="Order: "
