add validation, missing file, and provide correct url for ssl

--- a/languages/pl-PL.plg_j2store_payment_dotpay.ini
+++ b/languages/pl-PL.plg_j2store_payment_dotpay.ini
@@ -7,6 +7,8 @@ J2STORE_PLUGIN_DOTPAY_TOKEN_LABEL="Token"
 J2STORE_PLUGIN_DOTPAY_TOKEN_DESC="Token dla systemu płatności Dotpay."
 J2STORE_PLUGIN_DOTPAY_SANDBOX_LABEL="Środowisko testowe"
 J2STORE_PLUGIN_DOTPAY_SANDBOX_DESC="Zmiana środowiska z produkcyjnego na testowe."
+J2STORE_PLUGIN_DOTPAY_SSL_LABEL="Sklep używa HTTPS."
+J2STORE_PLUGIN_DOTPAY_SSL_DESC="Zaznacz, jeśli sklep korzysta z bezpiecznego połączenia SSL."
 
 ;CHECKOUT
 J2STORE_PLUGIN_DOTPAY_SUBMIT_BUTTON="Płać z Dotpay"
