--- a/languages/en-GB.plg_j2store_payment_dotpay.ini
+++ b/languages/en-GB.plg_j2store_payment_dotpay.ini
@@ -1,12 +1,13 @@
-J2STORE_DOTPAY_PAYMENT_DESC="Dotpay payment gateway for J2Store."
+J2STORE_DOTPAY_PAYMENT_DESC="<div style='text-align:left;font-size:14px;font-weight:normal'><img src='../media/j2store/images/payment/dotpay/dp_logo_alpha_175_50.png' />
+<br/><br/><br /><p class='dotpay_rejestracja'><a href='https://ssl.dotpay.pl/s2/login/registration/?affilate_id=j2store' target='_blank' class='btn btn-primary btn-large' title='Register your account in Dotpay.pl'><span class='icon-new icon-white'></span> Register your account in Dotpay.pl </a></p><br/>This module will allow you to use Dotpay payment methods for 'j2Store'.</b><br />To configure the plugin its necessary to enter ID and PIN from Dotpay panel.</b></div><br/><b><u>CONFIGURATION MODULE:</u></b><br /><br />"
 
 ;PARAMS
 J2STORE_PLUGIN_DOTPAY_ACCOUNTID_LABEL="Account ID"
 J2STORE_PLUGIN_DOTPAY_ACCOUNTID_DESC="Account ID for Dotpay payments"
-J2STORE_PLUGIN_DOTPAY_TOKEN_LABEL="Token"
-J2STORE_PLUGIN_DOTPAY_TOKEN_DESC="Token for Dotpay payments"
+J2STORE_PLUGIN_DOTPAY_TOKEN_LABEL="PIN"
+J2STORE_PLUGIN_DOTPAY_TOKEN_DESC="PIN must be the same as in Dotpay user panel"
 J2STORE_PLUGIN_DOTPAY_SANDBOX_LABEL="Sandbox"
-J2STORE_PLUGIN_DOTPAY_SANDBOX_DESC="Change from production to testing envairment"
+J2STORE_PLUGIN_DOTPAY_SANDBOX_DESC="Change from production to testing envairment. The test account is another account of production!"
 J2STORE_PLUGIN_DOTPAY_SSL_LABEL="Store use HTTPS."
 J2STORE_PLUGIN_DOTPAY_SSL_DESC="Mark yes, if store use SSL."
 
