--- a/languages/pl-PL.plg_j2store_payment_dotpay.ini
+++ b/languages/pl-PL.plg_j2store_payment_dotpay.ini
@@ -1,12 +1,13 @@
-J2STORE_DOTPAY_PAYMENT_DESC="System płatności dla J2Store"
+J2STORE_DOTPAY_PAYMENT_DESC="<div style='text-align:left;font-size:14px;font-weight:normal'><img src='../media/j2store/images/payment/dotpay/dp_logo_alpha_175_50.png' />
+<br/><br/><br /><p class='dotpay_rejestracja'><a href='https://ssl.dotpay.pl/s2/login/registration/?affilate_id=j2store' target='_blank' class='btn btn-primary btn-large' title='Zarejestruj konto w Dotpay.pl'><span class='icon-new icon-white'></span> Zarejestruj konto w Dotpay.pl </a></p><br/><b>Ten moduł pozwoli Ci na wykorzystanie metody płatności Dotpay w komponencie 'J2Store'.</b><br />Niezbędne czynności do konfiguracji wtyczki to przepisanie numeru ID oraz PIN z panelu Dotpay.</b></div><br/><b><u>KONFIGURACJA WTYCZKI:</u></b><br /><br />"
 
 ;PARAMS
 J2STORE_PLUGIN_DOTPAY_ACCOUNTID_LABEL="ID użytkownika"
 J2STORE_PLUGIN_DOTPAY_ACCOUNTID_DESC="ID użytkownika w systemie płatności Dotpay."
-J2STORE_PLUGIN_DOTPAY_TOKEN_LABEL="Token"
-J2STORE_PLUGIN_DOTPAY_TOKEN_DESC="Token dla systemu płatności Dotpay."
+J2STORE_PLUGIN_DOTPAY_TOKEN_LABEL="PIN"
+J2STORE_PLUGIN_DOTPAY_TOKEN_DESC="PIN można odnaleźć w panelu Dotpay po zalogowaniu klikając 'Ustawienia'"
 J2STORE_PLUGIN_DOTPAY_SANDBOX_LABEL="Środowisko testowe"
-J2STORE_PLUGIN_DOTPAY_SANDBOX_DESC="Zmiana środowiska z produkcyjnego na testowe."
+J2STORE_PLUGIN_DOTPAY_SANDBOX_DESC="Zmiana środowiska z produkcyjnego na testowe. Konto testowe jest odrębnym kontem od ptodukcyjnego!"
 J2STORE_PLUGIN_DOTPAY_SSL_LABEL="Sklep używa HTTPS."
 J2STORE_PLUGIN_DOTPAY_SSL_DESC="Zaznacz, jeśli sklep korzysta z bezpiecznego połączenia SSL."
 
