--- a/languages/pl-PL.plg_j2store_payment_dotpay.sys.ini
+++ b/languages/pl-PL.plg_j2store_payment_dotpay.sys.ini
@@ -1,1 +1,2 @@
-J2STORE_DOTPAY_PAYMENT_DESC="System płatności dla J2Store"
+J2STORE_DOTPAY_PAYMENT_DESC="<div style='text-align:left;font-size:14px;font-weight:normal'><img src='../media/j2store/images/payment/dotpay/dp_logo_alpha_175_50.png' />
+<br/><br/><b>Ten moduł pozwoli Ci na wykorzystanie metody płatności Dotpay w komponencie 'J2Store'.</b><br />Niezbędne czynności do konfiguracji wtyczki to przepisanie numeru ID oraz PIN z panelu Dotpay.</b></div>"
